[tool.poetry]
name = "enacit4r-sql"
version = "0.4.1"
description = "Python SQL utils for EPFL ENAC IT4R developments"
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.22"
jsonschema = "^4.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
